src/main/java/com/example/githubrepositoriesapi/infrastructure/error/UserNotFoundExceptionDto.java
package com.example.githubrepositoriesapi.infrastructure.error;


public record UserNotFoundExceptionDto(String message, Integer status) {
}
